Section permalinks: Fix hover styling
- Remove `text-decoration` from the permalink icons, because it's barely
  visible and looks odd.
- To ensure they still have some hover-responsiveness, define a new
  brand color (`--color-brand-highlight`) — which in the default themes
  is simply `--color-brand` with the `L` value dialed up a bunch in the
  HSL colorspace — and set it as the permalink hover color.
- Also override visited-link coloring from permalinks, as a special case,
  and have them always use the brand / brand-highlight color.

--- a/src/furo/assets/styles/content/_target.sass
+++ b/src/furo/assets/styles/content/_target.sass
@@ -13,6 +13,14 @@
 .headerlink
   font-weight: 100
   user-select: none
+  text-decoration-line: none
+  &:hover
+    color: var(--color-permalink-hover)
+
+.headerlink:visited
+  color: var(--color-permalink--visited)
+  &:hover
+    color: var(--color-permalink--visited-hover)
 
 h1,
 h2,
